# seq_vis

./: .gitignore  README.md  industrytslib-1.9.5-py3-none-any.whl  pyproject.toml  requirements.txt
backend/: main.py
backend/app/routers/: plot.py
backend/app/utils/: plotter.py
frontend/: package-lock.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  package-lock.json  package.json
frontend/src/api/: plot.js
frontend/src/components/: ImagePlotViewer.vue  Plotter.vue
libs/: industrytslib-2.0.2-py3-none-any.whl
