[project]
name = "seq-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "industrytslib",
    "pip>=24.3.1",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
industrytslib = { path = "industrytslib-1.9.5-py3-none-any.whl" }
