[project]
name = "seq-vis"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "industrytslib",
    "pip>=24.3.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
no-build-isolation-package = ["causal-conv1d", "mamba-ssm"]


[tool.uv.sources]
industrytslib = { path = "libs/industrytslib-2.0.2-py3-none-any.whl" }

